2004-02-14  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* libmuine/pointer-list-view.c: (pointer_list_view_select_next),
	(pointer_list_view_select_prev):
	* src/AddAlbumWindow.cs:
	* src/AddSongWindow.cs:
	* src/HandleView.cs:
	* src/KeyUtils.cs:
	* src/PlaylistWindow.cs:

	Forward navigation keypresses in add windows to the treeview.

2004-02-14  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* libmuine/pointer-list-model.c:
	(pointer_list_model_drag_data_received), (remove_ptr):

	Make drag to end of playlist work. This might need Gtk 2.3,
	I'm not sure ..

2004-02-14  Jorn Baayen  <jbaayen@gnome.org>

	* README:
	* TODO:
	* configure.in:
	* libmuine/db.c:
	* libmuine/db.h:
	* libmuine/id3-vfs/id3-vfs.c: (id3_vfs_bitrate):
	* libmuine/id3-vfs/id3-vfs.h:
	* libmuine/id3-vfs/mp3bitrate.c: (mpg123_parse_xing_header),
	(mp3_bitrate_parse_header):
	* libmuine/id3-vfs/mp3bitrate.h:
	* libmuine/metadata.c: (get_mp3_duration), (assign_metadata_mp3),
	(assign_metadata_ogg), (FLAC_metadata_callback):
	* libmuine/metadata.h:
	* libmuine/player.c: (player_class_init), (player_get_state),
	(tick_timeout_cb), (player_seek), (player_tell):
	* libmuine/player.h:
	* src/Metadata.cs:
	* src/Muine.cs:
	* src/Player.cs:
	* src/PlaylistWindow.cs:
	* src/SkipToWindow.cs:
	* src/Song.cs:
	* src/SongDatabase.cs:

	Cleanups to mtime handling, store duration in seconds instead of
	milliseconds.

2004-02-14  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:

	Make tray icon a fair bit more useful.

2004-02-12  Julio M. Merino Vidal  <jmmv@menta.net>

	* data/Makefile.am:

	Honour the --disable-schemas-install option

2004-02-11  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:
	* src/About.cs:

	Release 0.4.0.

2004-02-11  Jorn Baayen  <jbaayen@gnome.org>

	* NEWS:
	* configure.in:
	* src/About.cs:

	Bump version number to 0.3.99, update NEWS file for upcoming 0.4
	release.

2004-02-11  Jorn Baayen  <jbaayen@gnome.org>
